workspace = { members = ["src/behavioral/command/command_1", "src/behavioral/command/command_2", "src/behavioral/command/command_3", "src/behavioral/state", "src/behavioral/template"] }
[package]
name = "rust-design-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
